feat: adapt route to be more respectful of code normes
