# api/router.go
@@ -4,26 +4,52 @@ import (
 	"EtuEDT-Go/cache"
 	"EtuEDT-Go/domain"
 	"errors"
-	"github.com/gofiber/fiber/v2"
 	"slices"
 	"strconv"
 	"time"
+
+	"github.com/gofiber/fiber/v2"
 )
 
 func v2Router(router fiber.Router) {
 	router.Get("/", func(c *fiber.Ctx) error {
+		return c.JSON(fiber.Map{
+			"univ": "/v2/univ",
+			"room": "/v2/room",
+		})
+	})
+
+	router.Get("/univ", func(c *fiber.Ctx) error {
 		var universitiesResponse []domain.UniversityResponse
-		for _, university := range domain.AppConfig.Universities {
-			universitiesResponse = append(universitiesResponse, createUniversityResponse(&university))
+		for i, university := range domain.AppConfig.Universities {
+			universitiesResponse = append(universitiesResponse, createUniversityResponse(i, &university))
 		}
 		return c.JSON(universitiesResponse)
+	})
+
+	router.Get("/univ/:numUniv", func(c *fiber.Ctx) error {
+		numUniv, err := strconv.Atoi(c.Params("numUniv"))
+		if err != nil {
+			return c.Status(fiber.StatusBadRequest).JSON(domain.ErrorResponse{Error: "invalid parameter"})
+		}
+
+		if numUniv < 0 || numUniv >= len(domain.AppConfig.Universities) {
+			return c.Status(fiber.StatusNotFound).JSON(domain.ErrorResponse{Error: "university not found"})
+		}
+
+		university := domain.AppConfig.Universities[numUniv]
+		var timetablesResponse []domain.TimetableResponse
+		for _, timetable := range university.Timetables {
+			timetablesResponse = append(timetablesResponse, createTimetableResponse(numUniv, &university, &timetable))
+		}
+		return c.JSON(timetablesResponse)
 	})
 
 	router.Get("/room", func(c *fiber.Ctx) error {
 		var timetablesResponse []domain.TimetableResponse
 		university := domain.AppConfig.Room
 		for _, timetable := range university.Timetables {
-			timetablesResponse = append(timetablesResponse, createTimetableResponse(&university, &timetable))
+			timetablesResponse = append(timetablesResponse, createTimetableResponse(-1, &university, &timetable))
 		}
 		return c.JSON(timetablesResponse)
 	})
@@ -35,7 +61,7 @@ func v2Router(router fiber.Router) {
 			return c.Status(statusCode).JSON(domain.ErrorResponse{Error: err.Error()})
 		}
 
-		return serveTimetable(c, &university, timetable)
+		return serveTimetable(c, -1, &university, timetable)
 	})
 
 	router.Get("/:adeResources/:format?", func(c *fiber.Ctx) error {
@@ -46,12 +72,14 @@ func v2Router(router fiber.Router) {
 
 		var targetUniversity *domain.UniversityConfig
 		var targetTimetable *domain.TimetableConfig
+		var targetNumUniv int = -1
 
-		for _, university := range domain.AppConfig.Universities {
+		for i, university := range domain.AppConfig.Universities {
 			timetableIndex := slices.IndexFunc(university.Timetables, func(t domain.TimetableConfig) bool { return t.AdeResources == adeResources })
 			if timetableIndex >= 0 {
 				targetUniversity = &university
 				targetTimetable = &university.Timetables[timetableIndex]
+				targetNumUniv = i
 				break
 			}
 		}
@@ -60,11 +88,11 @@ func v2Router(router fiber.Router) {
 			return c.Status(fiber.StatusNotFound).JSON(domain.ErrorResponse{Error: "timetable not found"})
 		}
 
-		return serveTimetable(c, targetUniversity, targetTimetable)
+		return serveTimetable(c, targetNumUniv, targetUniversity, targetTimetable)
 	})
 }
 
-func serveTimetable(c *fiber.Ctx, university *domain.UniversityConfig, timetable *domain.TimetableConfig) error {
+func serveTimetable(c *fiber.Ctx, numUniv int, university *domain.UniversityConfig, timetable *domain.TimetableConfig) error {
 	cache.RecordHit(timetable.AdeResources)
 
 	timetableCache, ok := cache.GetTimetableByIds(timetable.AdeResources)
@@ -82,7 +110,7 @@ func serveTimetable(c *fiber.Ctx, university *domain.UniversityConfig, timetable
 
 	format := c.Params("format")
 	if len(format) == 0 {
-		return c.JSON(createTimetableResponse(university, timetable))
+		return c.JSON(createTimetableResponse(numUniv, university, timetable))
 	} else if format == "json" {
 		return c.JSON(timetableCache.Json)
 	} else if format == "ics" {
@@ -108,14 +136,15 @@ func getTimetableFromParam(c *fiber.Ctx, university *domain.UniversityConfig) (*
 	return &timetable, 0, nil
 }
 
-func createUniversityResponse(university *domain.UniversityConfig) domain.UniversityResponse {
+func createUniversityResponse(numUniv int, university *domain.UniversityConfig) domain.UniversityResponse {
 	return domain.UniversityResponse{
+		NumUniv:  numUniv,
 		NameUniv: university.NameUniv,
 		AdeUniv:  university.AdeUniv,
 	}
 }
 
-func createTimetableResponse(university *domain.UniversityConfig, timetable *domain.TimetableConfig) domain.TimetableResponse {
+func createTimetableResponse(numUniv int, university *domain.UniversityConfig, timetable *domain.TimetableConfig) domain.TimetableResponse {
 	timetableCache, ok := cache.GetTimetableByIds(timetable.AdeResources)
 	lastUpdate := time.Time{}
 	if ok {
@@ -123,6 +152,7 @@ func createTimetableResponse(university *domain.UniversityConfig, timetable *dom
 	}
 
 	return domain.TimetableResponse{
+		NumUniv:      numUniv,
 		NameUniv:     university.NameUniv,
 		DescTT:       timetable.DescTT,
 		NumYearTT:    timetable.NumYearTT,
